--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,11 +1,18 @@
 <div class="main-container">
+  
   <header class="header header-6">
     <div class="branding">
-      <a href="/" class="nav-link">
+      <a routerLink="/index" class="nav-link">
         <span class="title">ESI.env</span>
       </a>
     </div>
+
+    <div class="header-nav">
+        <a routerLink="/map" class="nav-link nav-text">MAP</a>
+        <a routerLink="/sensors" class="nav-link nav-text">SENSORS</a>
+    </div>
   </header>
+
   <div class="content-container">
     <div class="content-area">
       <router-outlet></router-outlet>
