--- a/app/src/app/components/map/map.component.html
+++ b/app/src/app/components/map/map.component.html
@@ -1,6 +1,8 @@
-<div style="display: flex; height: 100%; align-items: stretch;">
-    <div id="mapid" style="width: 100%;"></div>
-    <div style="width: 30%; padding-left: 20px;">
+<div class="clr-row">
+    <div class="clr-col-lg-10 clr-col-md-12 clr-col-12">
+        <div id="mapid" style="width: 100%; height: 90vh;"></div>
+    </div>
+    <div class="clr-col-lg-2 clr-col-md-12 clr-col-12">
         <table class="table">
             <thead>
                 <tr>
@@ -10,11 +12,11 @@
                 </tr>
             </thead>
             <tbody>
-                    <tr *ngFor="let d of data">
-                        <td>{{ d.time | date: 'dd.MM.yy HH:mm:ss'}}</td>
-                        <td>{{ d.id }}</td>
-                        <td>{{ d.value }} °C</td>
-                    </tr>
+                <tr *ngFor="let d of data">
+                    <td>{{ d.time | date: 'dd.MM.yy HH:mm:ss'}}</td>
+                    <td>{{ d.id }}</td>
+                    <td>{{ d.value }} °C</td>
+                </tr>
             </tbody>
         </table>
     </div>
