--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -1,3 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
+// dark theme
+// @import "./../node_modules/@clr/ui/clr-ui-dark.min.css";
+
+// light theme
+@import "./../node_modules/@clr/icons/clr-icons.min.css";
+
+@import "./../node_modules/@clr/ui/clr-ui.min.css";
+
+
 @import "./../node_modules/leaflet/dist/leaflet.css";
